fixes on to the alignment of features section

--- a/Projects from Code Free Camp/Product Page/style.css
+++ b/Projects from Code Free Camp/Product Page/style.css
@@ -116,32 +116,6 @@ section{display: flex;
     
     margin: 0px 20px;
 }
-#features{
-    
-    
-   
-
-
-    }
-
-
-/* #features .icon{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 125px;
-    width: 25vw;
-    padding: 5px;
-}
-
-#features .description{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        height: 125px;
-    width: 80vw;
-    padding: 5px;
-} */
 
 
 #video{
